# badger-new

./: .gitignore  README.md  package-lock.json  package.json
badger-new/: index.html
badger-new/src-tauri/: Cargo.toml
badger-new/src/components/: theme-provider.tsx
badger-new/src/lib/: patterns.ts
src/: App.tsx
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src/components/ui/: alert-dialog.tsx
src/lib/: file-parser.ts
