[package]
name = "badger"
version = "1.0.0"
description = "Badger - Crypto Data Extraction"
authors = ["Sezione Criptovalute"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
debug = false
